src/test/parse-fail/doc-before-extern-rbrace.rs
// compile-flags: -Z parse-only

extern {
    /// hi
    //~^ ERROR expected item after doc comment
}
